fix(video): align preview video to fit container (#86)

--- a/styles/includes/_work.scss
+++ b/styles/includes/_work.scss
@@ -100,6 +100,7 @@
 			width: 100%;
 			z-index: 4;
 			max-height: 100vh;
+			object-fit: contain;
 
 			@include bp-xs() {
 				width: 150vw;
